# Generals-WebAssembly

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Source/Common/: FrameRateLimit.cpp
Core/GameEngine/Source/Common/INI/: INI.cpp
Core/GameEngine/Source/Common/System/: GameMemoryInit.cpp
Core/GameEngine/Source/GameClient/GUI/: LoadScreen.cpp
Core/GameEngine/Source/GameNetwork/: IPEnumeration.cpp  LANAPI.cpp  WebUDP.cpp  udp.cpp
Core/GameEngineDevice/: CMakeLists.txt
Core/GameEngineDevice/Source/OpenALAudioDevice/: OpenALAudioManager.cpp  OpenALAudioStream.cpp
Core/Libraries/: CMakeLists.txt
Core/Libraries/Source/WWVegas/WW3D2/: CMakeLists.txt  dx8wrapper.cpp  render2dsentence.cpp  render2dsentence.h
Core/Libraries/Source/WWVegas/WWLib/: bittype.h  osdep.h
Core/Libraries/Source/d3d8webgl/: CMakeLists.txt
Core/Libraries/Source/d3d8webgl/src/: d3d8webgl.cpp  webgl_pipeline.cpp  webgl_pipeline.h
Dependencies/Utility/Utility/: endian_compat.h
Generals/Code/CompatLib/Include/: memory_compat.h
GeneralsMD/Code/CompatLib/: CMakeLists.txt
GeneralsMD/Code/CompatLib/Source/: d3dx8_compat.cpp
GeneralsMD/Code/GameEngineDevice/Source/: SDL3GameEngine.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  WebMain.cpp
cmake/: config-build.cmake  dx8.cmake  emscripten.cmake  ffmpeg-emscripten.cmake  gamespy.cmake  openal.cmake  sdl3.cmake
docs/DEV_BLOG/: 2026-07-DIARY.md
docs/WORKDIR/planning/: WEB_PORT_PLAN.md
scripts/web/: make-dist.sh  pack-assets.sh  packer.py
web/: go.mod
web/cmd/gen-manifest/: main.go
web/server/: main.go  tls.go
web/shell/: brotli.min.js  coi-serviceworker.js  game.js  ice.json  index.html  loader.js  loadscreen.js  lobby.js  mp-ui.js  netbridge.js  package-lock.json  package.json  signaling.js  storage.js  unpack-brotli-worker.js  unpack-brotli-worker.src.js  unpack-worker.js  unpack-worker.src.js
web/shell/i18n/: en.js  i18n.js  ru.js
(+12 files in other folders)
